--- a/RentAMovie/Views/Movie/List.cshtml
+++ b/RentAMovie/Views/Movie/List.cshtml
@@ -1,11 +1,20 @@
-﻿@using RentAMovie.Data.Models
-@model List<Movie>
+﻿@model List<Movie2Module>
 
 <h1>Movies</h1>
 
-@foreach(var movie in Model){
+@*@foreach(var movie in Model){
 	<p>@movie.Title</p>
 	<p>@movie.Description</p>
 	<p>@movie.DateCreated</p>
 	<br />
-}
+}*@
+
+<ul>
+	@foreach (var movie in Model)
+	{
+		<li>
+			<p><b>Title:</b> @movie.Title (@movie.ReleaseDate)</p>
+			<p><b>Description:</b> @movie.Description</p>
+		</li>
+	}
+</ul>
