--- a/RentAMovie/Views/Movie/List.cshtml
+++ b/RentAMovie/Views/Movie/List.cshtml
@@ -1,20 +1,19 @@
-﻿@model List<Movie2Module>
+﻿@model IEnumerable<PopularMovieResultModule>
 
 <h1>Movies</h1>
 
-@*@foreach(var movie in Model){
-	<p>@movie.Title</p>
-	<p>@movie.Description</p>
-	<p>@movie.DateCreated</p>
-	<br />
-}*@
-
-<ul>
+<h3>What's Popular</h3>
+<div class="container text-center">
+  <div class="row">
 	@foreach (var movie in Model)
 	{
-		<li>
-			<p><b>Title:</b> @movie.Title (@movie.ReleaseDate)</p>
+		var posterPath = "https://image.tmdb.org/t/p/w500" + movie.PosterPath;
+
+		<div class="col">
+			<p><b>Title:</b> @movie.Title (@movie.ReleaseDate.ToString("dd-MM-yyyy"))</p>
 			<p><b>Description:</b> @movie.Description</p>
-		</li>
+			<img src="@posterPath" width="200">
+		</div>
 	}
-</ul>
+  </div>
+</div>
