--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RentAMovie
 @using RentAMovie.Models
+@using RentAMovie.Models.MovieModuls
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
