Adding carousel slider concept in index view

--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RentAMovie.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("MovieStylesSection", required: false)
+    @await RenderSectionAsync("HomeStylesSection", required: false)
 </head>
 <body>
     <header>
