--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -1,8 +1,106 @@
-﻿@{
+﻿@model IEnumerable<PopularMovieResultModule>
+@{
     ViewData["Title"] = "Home Page";
+    string posterPath = "https://image.tmdb.org/t/p/w500";
+    bool firstSlide = true;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h4>Top rated action movies</h4>
+<div id="carouselExampleCaptions" class="carousel slide small" data-bs-ride="false">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+    <div class="carousel-inner">
+        @foreach (var movie in Model)
+        {
+                if (firstSlide == true)
+                {
+                    firstSlide = false;
+                    <div class="carousel-item active">
+                    <div class="carouselImg small" style="background-image: url(@(posterPath + movie.PosterPath))"></div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <a href="">
+                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                            </a>
+                            <p>@movie.Description.Substring(0, movie.Description.Length / 2)...</p>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="carousel-item">
+                        <div class="carouselImg small" style="background-image: url(@(posterPath + movie.PosterPath))"></div>
+                        <div class="carousel-caption d-none d-md-block">
+                            <a href="">
+                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                            </a>
+                            <p>@movie.Description.Substring(0, movie.Description.Length / 2)...</p>
+                        </div>
+                    </div>
+                }
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
 </div>
+
+@section HomeStylesSection {
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+
+@*Full width display if the movies*@
+@*<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+    <div class="carousel-inner">
+        @foreach (var movie in Model)
+        {
+            if (firstSlide == true)
+            {
+                firstSlide = false;
+                <div class="carousel-item active">*@
+    @*<img src="@(posterPath + movie.PosterPath)" class="d-block w-100" alt="@movie.Title poster">*@
+    @*<div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                        <p>@movie.Description.Substring(0, 80)...</p>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="carousel-item">*@
+    @*<img src="@(posterPath + movie.PosterPath)" class="d-block w-100" alt="@movie.Title poster">*@
+    @*<div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                        <p>@movie.Description.Substring(0, 50)...</p>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>*@
