Adding search form in movie list and moving code

--- a/RentAMovie/Views/Movie/List.cshtml
+++ b/RentAMovie/Views/Movie/List.cshtml
@@ -5,7 +5,14 @@
 	string ratingColor;
 }
 
-<h1>Movies</h1>
+<div class="search-section">
+	<h1>Movies</h1>
+	<div>
+		<form method="post">
+			<input type="text" placeholder="Search" />
+		</form>
+	</div>
+</div>
 
 <h3>What's Popular</h3>
 @if (true)
