--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="~/css/home.css" />
 }
 
-@*Full width display if the movies*@
+@*Full width display for the movies*@
 @*<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
