--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -25,9 +25,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="List">All Movies</a>
                         </li>
                         <li class="nav-item">
@@ -39,6 +36,7 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -47,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - RentAMovie - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.UtcNow.Year - ViewMovies
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
