--- a/RentAMovie/Views/Movie/Create.cshtml
+++ b/RentAMovie/Views/Movie/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create a movie</h1>
+<h2>Create movie</h2>
 
 <div class="row">
     <div class="col-md-4">
@@ -21,9 +21,17 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Tagline" class="control-label"></label>
+                <input asp-for="Tagline" class="form-control" />
+                <span asp-validation-for="Tagline" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Runtime" class="control-label"></label>
-                <input asp-for="Runtime" class="form-control" />
-                <span asp-validation-for="Runtime" class="text-danger"></span>
+                <div class="input-group mb-3">
+                    <input asp-for="Runtime" class="form-control" />
+                    <span asp-validation-for="Runtime" class="text-danger"></span>
+                    <span class="input-group-text">min</span>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Revenue" class="control-label"></label>
@@ -42,19 +50,6 @@
                 </div>
             </div>
             <div class="form-group">
-                <label asp-for="ContentRanting" class="control-label"></label>
-                <input asp-for="ContentRanting" class="form-control" />
-                <span asp-validation-for="ContentRanting" class="text-danger"></span>
-
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                </select>
-
-            </div>
-            <div class="form-group">
                 <label asp-for="DatePublished" class="control-label"></label>
                 <input asp-for="DatePublished" class="form-control" />
                 <span asp-validation-for="DatePublished" class="text-danger"></span>
@@ -69,11 +64,21 @@
                 <input asp-for="Trailer" class="form-control" />
                 <span asp-validation-for="Trailer" class="text-danger"></span>
             </div>
+            @*
+            TODO: Implement Genres
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            <label asp-for="ContentRanting" class="control-label"></label>
+            <input asp-for="ContentRanting" class="form-control" />
+            <span asp-validation-for="ContentRanting" class="text-danger"></span>
+
+            <select class="form-select" aria-label="Default select example">
+            <option selected>Open this select menu</option>
+            <option value="1">One</option>
+            <option value="2">Two</option>
+            <option value="3">Three</option>
+            </select>
+
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
