--- a/RentAMovie/Views/Movie/List.cshtml
+++ b/RentAMovie/Views/Movie/List.cshtml
@@ -7,7 +7,11 @@
 
 <div class="search-section">
 	<h1>Movies</h1>
-	<div>
+	<div class="top-nav">
+		<p>Sort By:</p>
+		<button type="button" class="btn btn-primary">Rating</button>
+		<button type="button" class="btn btn-primary">Popularity</button>
+		<button type="button" class="btn btn-primary">Number of votes</button>
 		<form method="post">
 			<input type="text" placeholder="Search" />
 		</form>
