Adding drop-down list for movies in navigation

--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -54,7 +54,7 @@
     </button>
 </div>
 
-@section HomeStylesSection {
+@section Styles {
     <link rel="stylesheet" href="~/css/home.css" />
 }
 
