--- a/RentAMovie/Views/Movie/Popular.cshtml
+++ b/RentAMovie/Views/Movie/Popular.cshtml
@@ -56,10 +56,10 @@
 	</div>
 </div>
 
-@section MovieStylesSection {
+@section Styles {
 	<link rel="stylesheet" href="~/css/movies.css" />
 }
-@section MovieScriptsSection {
+	@section Scripts {
 	<script src="~/js/renderMovieInfo.js"></script>
 }
 @*@section MovieInfoSection {
