--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RentAMovie.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
-    @await RenderSectionAsync("MovieStylesSection", required: false)
-    @await RenderSectionAsync("HomeStylesSection", required: false)
 </head>
 <body>
     <header>
@@ -22,8 +20,16 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="List">Movies</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Movies
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
+                                <li><a class="dropdown-item" asp-controller="Movie" asp-action="Popular">Popular</a></li>
+                                <li><a class="dropdown-item" href="#">Top rated</a></li>
+                                <li><a class="dropdown-item" href="#">My movies</a></li>
+                                <li><a class="dropdown-item" href="#">Search</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Create">Add Movie</a>
@@ -50,6 +56,5 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    @await RenderSectionAsync("MovieScriptsSection", required: false)
 </body>
 </html>
