Adding top rated movies view and creating partials for duplicate code

--- a/RentAMovie/Views/Movie/TopRated.cshtml
+++ b/RentAMovie/Views/Movie/TopRated.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<PopularMovieResultModule>
 @{
-	ViewData["Title"] = "Popular";
+	ViewData["Title"] = "Top Rated";
 }
 
 <partial name="~/Views/Shared/Movie/_MovieFilters.cshtml" />
 
-<h3>What's Popular</h3>
+<h3>Top Rated</h3>
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
 
