--- a/RentAMovie/Views/Shared/_Layout.cshtml
+++ b/RentAMovie/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
                                 <li><a class="dropdown-item" asp-controller="Movie" asp-action="Popular">Popular</a></li>
-                                <li><a class="dropdown-item" href="#">Top rated</a></li>
+                                <li><a class="dropdown-item" asp-controller="Movie" asp-action="TopRated">Top rated</a></li>
                                 <li><a class="dropdown-item" href="#">My movies</a></li>
                                 <li><a class="dropdown-item" href="#">Search</a></li>
                             </ul>
