--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -128,3 +128,70 @@
     max-width: 880px;
     font-size: 1.1rem;
 }
+
+.details-container{
+    margin-top: 10px;
+    padding: 10px;
+    color: #0c0c0c;
+    display: flex;
+    position: relative;
+}
+
+.main-details{
+    width: 85%;
+    height: 100%;
+}
+
+.aside-details {
+    width: 100%;
+    height: 100%;
+}
+
+.actors .card {
+    width: 150px !important;
+    padding: 0;
+    margin: 0 !important;
+}
+
+.actors .col {
+    padding: 0;
+}
+
+.card-title a {
+    width: 100%;
+    text-decoration: none;
+    color: #0c0c0c;
+    font-weight: bold;
+}
+
+.card-title a:hover {
+    color: #0d6efd;
+}
+
+.card-body {
+    padding: 0.7rem 0.7rem;
+}
+
+.media-scroller{
+    display: grid;
+    gap: 1rem; 
+    grid-auto-flow: column;
+    grid-auto-columns: 13%;
+    overflow-x: auto;
+    padding: 10px;
+}
+
+.media-scroller::-webkit-scrollbar-track {
+    padding: 2px 0;
+    background-color: inherit;
+}
+
+.media-scroller::-webkit-scrollbar {
+    height: 10px;
+}
+
+.media-scroller::-webkit-scrollbar-thumb {
+    height: 2px;
+    border-radius: 5px;
+    background-color: #6c757d;
+}
