--- a/RentAMovie/wwwroot/css/moviesSingle.css
+++ b/RentAMovie/wwwroot/css/moviesSingle.css
@@ -145,16 +145,15 @@
 .aside-details {
     width: 100%;
     height: 100%;
+    padding: 10px;
+}
+
+.aside-details h5{
+    margin-bottom: 0;
 }
 
 .actors .card {
     width: 150px !important;
-    padding: 0;
-    margin: 0 !important;
-}
-
-.actors .col {
-    padding: 0;
 }
 
 .card-title a {
@@ -168,13 +167,9 @@
     color: #0d6efd;
 }
 
-.card-body {
-    padding: 0.7rem 0.7rem;
-}
-
 .media-scroller{
     display: grid;
-    gap: 1rem; 
+    gap: 1.3rem; 
     grid-auto-flow: column;
     grid-auto-columns: 13%;
     overflow-x: auto;
@@ -194,4 +189,16 @@
     height: 2px;
     border-radius: 5px;
     background-color: #6c757d;
+}
+
+.more-actors{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.more-actors a{
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2rem;
 }
