--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RentAMovie
 @using RentAMovie.Models
 @using RentAMovie.Models.MovieModuls
+@using RentAMovie.Models.PersonModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
