--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -1,12 +1,11 @@
-﻿@model IEnumerable<PopularMovieResultModule>
+﻿@model IndexViewModel
 @{
     ViewData["Title"] = "Home Page";
-    string posterPath = "https://image.tmdb.org/t/p/w500";
+    string posterPath = "https://image.tmdb.org/t/p/w1920_and_h800_multi_faces";
     bool firstSlide = true;
 }
 
-<h4>Top rated action movies</h4>
-<div id="carouselExampleCaptions" class="carousel slide small" data-bs-ride="false">
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -15,7 +14,78 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
     </div>
     <div class="carousel-inner">
-        @foreach (var movie in Model)
+        @foreach (var movie in Model.TopActionMovies)
+        {
+            if (firstSlide == true)
+            {
+                firstSlide = false;
+                <div class="carousel-item active">
+                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                        <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                            <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                        </a>
+                        <p>@movie.Description.Substring(0, 200)...</p>
+                    </div>
+                </div>
+            }
+            else
+            {
+                <div class="carousel-item">
+                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                        <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                    </a>
+                    <div class="carousel-caption d-none d-md-block">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                            <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                        </a>
+                        <p>@movie.Description.Substring(0, 200)...</p>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<div class="statistics">
+    <div class="statistics-item">
+        <h5>Uploaded Movies</h5>
+        <p>@Model.TotalMovies</p>
+    </div>
+    <div class="statistics-item">
+        <h5>Written Reviews</h5>
+        <p>@Model.TotalReviews</p>
+    </div>
+    <div class="statistics-item">
+        <h5>Registered Users</h5>
+        <p>@Model.TotalUsers</p>
+    </div>
+</div>
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/home.css" />
+}
+@*Small carouse for the movies*@
+@*<div id="carouselExampleCaptions" class="carousel slide small" data-bs-ride="false">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    </div>
+    <div class="carousel-inner">
+        @foreach (var movie in Model.TopActionMovies)
         {
                 if (firstSlide == true)
                 {
@@ -42,57 +112,6 @@
                         </div>
                     </div>
                 }
-        }
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>
-
-@section Styles {
-    <link rel="stylesheet" href="~/css/home.css" />
-}
-
-@*Full width display for the movies*@
-@*<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    </div>
-    <div class="carousel-inner">
-        @foreach (var movie in Model)
-        {
-            if (firstSlide == true)
-            {
-                firstSlide = false;
-                <div class="carousel-item active">*@
-    @*<img src="@(posterPath + movie.PosterPath)" class="d-block w-100" alt="@movie.Title poster">*@
-    @*<div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                        <p>@movie.Description.Substring(0, 80)...</p>
-                    </div>
-                </div>
-            }
-            else
-            {
-                <div class="carousel-item">*@
-    @*<img src="@(posterPath + movie.PosterPath)" class="d-block w-100" alt="@movie.Title poster">*@
-    @*<div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                        <p>@movie.Description.Substring(0, 50)...</p>
-                    </div>
-                </div>
-            }
         }
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
