--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using RentAMovie.Models
 @using RentAMovie.Models.MovieModuls
 @using RentAMovie.Models.PersonModels
+@using RentAMovie.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
