Implementing basic search on movies in the DB and fixing problems

--- a/RentAMovie/Views/Shared/Movie/_MovieFilters.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieFilters.cshtml
@@ -5,6 +5,6 @@
 		<button type="button" class="btn btn-primary">Rating</button>
 		<button type="button" class="btn btn-primary">Popularity</button>
 		<button type="button" class="btn btn-primary">Number of votes</button>
-		<button type="button" class="btn btn-secondary">Search</button>
+		<a asp-controller="Search" asp-action="Index" class="btn btn-secondary">Search</a>
 	</div>
 </div>
