--- a/RentAMovie/Views/Movie/TopRated.cshtml
+++ b/RentAMovie/Views/Movie/TopRated.cshtml
@@ -5,7 +5,7 @@
 
 <partial name="~/Views/Shared/Movie/_MovieFilters.cshtml" />
 
-<h3>Top Rated</h3>
+<h3>Top rated of all time</h3>
 
 <partial name="~/Views/Shared/Movie/_MovieList.cshtml" />
 
