--- a/RentAMovie/Views/_ViewImports.cshtml
+++ b/RentAMovie/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using RentAMovie.Models.MovieModuls
 @using RentAMovie.Models.PersonModels
 @using RentAMovie.Models.Home
+@using RentAMovie.Models.Search
+@using RentAMovie.Data.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
