--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="search-bar">
-	<form method="get">
+	<form method="get" autocomplete="off">
 		<input asp-for="SearchTerm" class="form-control" />
 	</form>
 </div>
