Adding more styling for the movie cards

--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -24,9 +24,13 @@
 				{
 					ratingColor = "orange";
 				}
-				else
+				else if (movie.Rating < 5)
 				{
 					ratingColor = "red";
+				}
+				else
+				{
+					ratingColor = "black";
 				}
 
 				<div class="card">
