--- a/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
@@ -16,7 +16,7 @@
 			{
 				ratingColor = "orange";
 			}
-			else if (float.Parse(movie.Rating) < 5)
+			else if (float.Parse(movie.Rating) < 5 && float.Parse(movie.Rating) > 0)
 			{
 				ratingColor = "red";
 			}
@@ -38,7 +38,7 @@
 				</a>
 				<div class="card-body">
 					<div class="rating @ratingColor">
-						<p>@(movie.Rating != null ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
+						<p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
 					</div>
 					<h5 class="card-title">
 						<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
