--- a/RentAMovie/Views/Search/Index.cshtml
+++ b/RentAMovie/Views/Search/Index.cshtml
@@ -66,15 +66,22 @@
 		<div class="row">
 			@foreach (var movie in Model.Movies)
 			{
-				if (movie.Rating >= 8)
+				string rating = "0";
+
+				if (movie.Rating != null)
+				{
+					rating = movie.Rating;
+				}
+
+				if (float.Parse(rating) >= 8)
 				{
 					ratingColor = "green";
 				}
-				else if (movie.Rating >= 5)
+				else if (float.Parse(rating) >= 5)
 				{
 					ratingColor = "orange";
 				}
-				else if (movie.Rating < 5 && movie.Rating > 0)
+				else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
 				{
 					ratingColor = "red";
 				}
@@ -85,9 +92,9 @@
 
 				<div class="card">
 					<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-						@if (movie.Poster != null)
+						@if (movie.PosterPath != null)
 						{
-							<img src="@(movie.TmdbId != null ? posterPath + movie.Poster : movie.Poster)" class="card-img-top" alt="@movie.Title poster">
+							<img src="@(movie.TmdbId != null ? posterPath + movie.PosterPath : movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
 						}
 						else
 						{
@@ -96,12 +103,12 @@
 					</a>
 					<div class="card-body">
 						<div class="rating @ratingColor">
-							<p>@(movie.Rating != null && movie.Rating != 0 ? movie.Rating.Value.ToString("0.0") : "NR")</p>
+							<p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
 						</div>
 						<h5 class="card-title">
 							<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
 						</h5>
-						<h6>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</h6>
+						<h6>@(movie.ReleaseDate != null ? movie.ReleaseDate.Value.ToString("MMM dd, yyyy") : "-")</h6>
 					</div>
 					<img class="info" src="~/images/information.png" alt="info button">
 				</div>
@@ -113,6 +120,12 @@
 		<p id="no-results">No results</p>
 	}
 </div>
+@*<div>
+	<a asp-controller="Search"
+		asp-action="Index" 
+		asp-route-currentPage="@(Model.CurrentPage + 1)"
+		asp-route-searchTerm="@Model.SearchTerm">More</a>
+</div>*@
 
 @section Styles {
 	<link rel="stylesheet" href="~/css/search.css" />
