--- a/RentAMovie/wwwroot/css/search.css
+++ b/RentAMovie/wwwroot/css/search.css
@@ -55,5 +55,5 @@
 .filters::-webkit-scrollbar-thumb {
     height: 2px;
     border-radius: 5px;
-    background-color: #6c757d;
+    background-color: #6c757d8b;
 }
